# my_pkg_py

./: .gitignore  .mustache  .python-version  .sync.ffs_db  LICENSE  README.md  generate_rst.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  ty.toml
.cursor/rules/: english.mdc  python-env.mdc
.github/workflows/: docs.yml
configure/accelerate/: acc_cfg_1cards.yaml  acc_cfg_2cards.yaml  acc_cfg_3cards.yaml  acc_cfg_4cards.yaml  acc_cfg_8cards.yaml  acc_ds_cfg.yaml  ds_cfg.json
doc/: flowchart.md
docs/: Makefile  index.md
docs/api/: dataset.md  diffusion.md  flow_matching.md  index.md  model.md  optimizer.md  pipeline.md  scheduler.md  util.md
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: index.rst  ls_mlkit.dataset.MT19937.rst  ls_mlkit.dataset.iris.rst  ls_mlkit.dataset.lda_dataset.rst  ls_mlkit.dataset.minist_cifar.rst  ls_mlkit.dataset.nature_language.rst  ls_mlkit.dataset.regular_language.rst  ls_mlkit.dataset.rst  ls_mlkit.diffuser.base_diffuser.rst  ls_mlkit.diffuser.conditioner.conditioner.rst  ls_mlkit.diffuser.conditioner.rst  ls_mlkit.diffuser.euclidean_ddim_diffuser.rst  ls_mlkit.diffuser.euclidean_ddpm_diffuser.rst  ls_mlkit.diffuser.euclidean_diffuser.rst  ls_mlkit.diffuser.lie_group_diffuser.rst  ls_mlkit.diffuser.manifold_diffuser.rst  ls_mlkit.diffuser.model_interface.rst  ls_mlkit.diffuser.rst  ls_mlkit.diffuser.sde.base_sde.rst  ls_mlkit.diffuser.sde.corrector.rst  ls_mlkit.diffuser.sde.predictor.rst  ls_mlkit.diffuser.sde.rst  ls_mlkit.diffuser.sde.sampler.rst  ls_mlkit.diffuser.sde.score_fn_utils.rst  ls_mlkit.diffuser.sde.sde_lib.rst  ls_mlkit.diffuser.so3_diffuser.rst  ls_mlkit.diffuser.time_scheduler.rst  ls_mlkit.diffusion.base_diffuser.rst  ls_mlkit.diffusion.conditioner.conditioner.rst  ls_mlkit.diffusion.conditioner.rst  ls_mlkit.diffusion.conditioner.utils.rst  ls_mlkit.diffusion.euclidean_ddim_diffuser.rst  ls_mlkit.diffusion.euclidean_ddpm_diffuser.rst  ls_mlkit.diffusion.euclidean_diffuser.rst  ls_mlkit.diffusion.euclidean_edm_diffuser.rst  ls_mlkit.diffusion.euclidean_vpsde_diffuser.rst  ls_mlkit.diffusion.lie_group_diffuser.rst  ls_mlkit.diffusion.manifold_diffuser.rst  ls_mlkit.diffusion.model_interface.rst  ls_mlkit.diffusion.rst  (+106 more)
example/conditional_diff/: callbacks.py  main.py
example/conditional_fm/: Untitled-1.py  cfm.ipynb  main_fm.py  utils.py
example/edm_diff/: main.py  utils_for_main.py
example/edm_diff_butterfly/: main.py  utils_for_main.py
example/edm_diff_moon/: main.py  utils_for_main.py
example/image_diffusion/: main_ddim.py  main_ddpm.py  main_inpainting.py  utils.py
example/image_diffusion_vpsde/: main.py  main_inpainting.py  utils.py
example/image_flow_matching/: main_fm.py  utils.py
example/vpsde_diffusion/: callbacks.py  main.py  utils.py
shell_script/: generate_uml.sh  linter.sh  mc-run-python.sh  prepare.sh  sovle_linter_info.sh
src/ls_mlkit/dataset/: MT19937.py  __init__.py  iris.py  lda_dataset.py  minist_cifar.py  nature_language.py  regular_language.py
src/ls_mlkit/diffuser/: base_diffuser.py  euclidean_ddim_diffuser.py  euclidean_ddpm_diffuser.py  euclidean_diffuser.py  lie_group_diffuser.py  manifold_diffuser.py  model_interface.py  so3_diffuser.py
src/ls_mlkit/diffusion/: __init__.py  base_diffuser.py  ddpm.py  euclidean_ddim_diffuser.py  euclidean_ddpm_diffuser.py  euclidean_diffuser.py  euclidean_edm_diffuser.py  euclidean_vpsde_diffuser.py  lie_group_diffuser.py  manifold_diffuser.py  model_interface.py  so3_diffuser.py  time_scheduler.py
src/ls_mlkit/flow_matching/: __init__.py  base_fm.py  euclidean_ot_fm.py  fm.py  independent_cfm.py  model_interface.py  rectified_flow.py  time_scheduler.py
src/ls_mlkit/model/: __init__.py  longLinear.py  model_for_pipeline.py
src/ls_mlkit/my_dataset/: MT19937.py  __init__.py  iris.py  lda_dataset.py  nature_language.py
src/ls_mlkit/my_diffuser/: __init__.py  base_diffuser.py  config.py  ddpm_config.py  ddpm_diffuser.py  ddpm_diffuser_v2.py  diffuser.py  euclidean_ddim_diffuser.py  euclidean_ddpm_diffuser.py  euclidean_diffuser.py  lie_group_diffuser.py  loss_utils.py  manifold_diffuser.py  model_interface.py  so3_diffuser.py  time_scheduler.py
src/ls_mlkit/my_model/: __init__.py  longLinear.py
src/ls_mlkit/my_optimizer/: __init__.py  sam.py
src/ls_mlkit/my_pipeline/: __init__.py  dist_pipeline_impl.py  distributed_pipeline.py  pipeline.py
src/ls_mlkit/my_scheduler/: __init__.py
src/ls_mlkit/my_utils/: __init__.py  cgraph.py  decorators.py  dequantize.py  hash.py  interp.py  iterator.py  lora.py  observer.py  proxy.py  shape.py  show.py  utils_for_main.py
src/ls_mlkit/optimizer/: __init__.py  sam.py
src/ls_mlkit/pipeline/: __init__.py  callback.py  dist_pipeline_impl.py  distributed_pipeline.py  pipeline.py
src/ls_mlkit/scheduler/: __init__.py  lr_scheduler_factory.py
src/ls_mlkit/util/: __init__.py  base_config_class.py  cgraph.py  cuda.py  decorators.py  dequantize.py  hash.py  huggingface.py  image.py  interp.py  iterator.py  llm.py  log.py  lora.py  observer.py  pkl.py  proxy.py  resource_monitor.py  resumable_saver.py  scheduler.py  se3.py  seed.py  shape.py  shape_class.py  show.py  sniffer.py  training_steps.py  typing_utils.py  utils_for_main.py  vector_utils.py
src/my_pkg_py/my_dataset/: MT19937.py  __init__.py  lda_dataset.py  minist_cifar.py  nature_language.py  regular_language.py
src/my_pkg_py/my_model/: __init__.py  causal_llama.py  diagonal_network.py  dnnODEModel.py  ffn.py  (+4 more)
template/conditional_diff/: main.py  utils.py
template/conditional_fm/: main_fm.py  utils.py
template/image_diffusion/: main_ddim.py  main_ddpm.py  main_inpainting.py  utils.py
template/image_flow_matching/: main_fm.py  utils.py
test/: auto_impl.py  ddpm_inpainting_diffuser.py  dist.py  doc.py  flow.ipynb  fm.ipynb  inpainting_example.py  linter.sh  main.py  main_hook.py  main_inpainting_train.py  test.py  test_prepare_order.py  tqdm_enum.py  utils.py
test/diffuser/: main.ipynb  test.py
test/my_pipeline/: ddpm_test.py
test/sde/: main.py
tests/: test_offload_smoke.py
(+249 files in other folders)
