[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ls_mlkit"
version = "0.0.1"
authors = [{ name = "zengls", email = "3186428803@qq.com" }]
description = "Python package for machine learning"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "exrex",
    "numpy",
    "omegaconf",
    "pandas",
    "peft",
    "psutil",
    "setuptools",
    "torchdiffeq",
    "torchviz",
    "tqdm",
    "transformers",
    "wandb",
    "bitsandbytes",
    "safetensors",
    "torchvision",
    "biotite",
    "pillow",
    "diffusers",
    "einops",
    "tabulate",
    "overrides",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zeroDtree/my_pkg_py"
