[project]
name = "ls_mlkit"
version = "0.0.1"
authors = [{ name = "zengls", email = "3186428803@qq.com" }]
description = "Python package for machine learning"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "torch-cluster",
    "torch-scatter",
    "torch_geometric",
]


[dependency-groups]
utils = [
    "ipywidgets",
    "overrides",
    "tabulate",
    "fire",
    "wandb",
    "psutil",
    "exrex",
    "setuptools",
    "graphviz",
    "PyQt6",
    "matplotlib",
    "ipykernel",
    "hydra-core",
    "tqdm",
    "omegaconf",
    "pandas",
    "seaborn",
    "easydict",
    "chardet",
    "multiprocess",
    "sphinx",
]
lint = ["black", "pylint", "autoflake"]
dl = [
    "tensorboard",
    "opt_einsum",
    "datasets",
    "peft",
    "torchdiffeq",
    "transformers==4.48.3",
    "einops",
    "bitsandbytes",
    "torchviz",
    "flow_matching",
    "numpy",
    "safetensors",
    "diffusers",
    "timm",
    "scikit-learn",
    { include-group = "utils" },
]

hard = ["deepspeed", "flash-attn"]

bio = ["biotite"]

dev = [{ include-group = "lint" }, { include-group = "dl" }, { include-group = "bio" }]

[project.optional-dependencies]
bio = ["biotite"]

[tool.uv.extra-build-dependencies]
deepspeed = [{ requirement = "torch", match-runtime = true }]
flash-attn = [{ requirement = "torch", match-runtime = true }]
cchardet = ["cython"]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu124/torch_scatter-2.1.2%2Bpt26cu124-cp312-cp312-linux_x86_64.whl" }
torch-cluster = { url = "https://data.pyg.org/whl/torch-2.6.0%2Bcu124/torch_cluster-1.6.3%2Bpt26cu124-cp312-cp312-linux_x86_64.whl" }


[project.urls]
Homepage = "https://github.com/zeroDtree/my_pkg_py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
